# skewrun

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
crates/ad-time/: Cargo.toml
crates/ad-time/src/: lib.rs  time_src.rs
crates/ad-time/src/protocols/: ber.rs  cldap.rs  common.rs  kerberos.rs  mod.rs  ntlm.rs  ntp.rs  smb.rs  smb_common.rs  socket_opts.rs
crates/skewrun/: Cargo.toml
crates/skewrun/src/: main.rs
docs/adr/: 0001-smb-311-dialect.md  0002-kerberos-till-constant.md  0003-cldap-request-baseline.md  0004-csprng-jitter-exponential-backoff.md  0005-os-fingerprint-camouflage.md  0006-per-request-nonce-injection.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_cldap_response.rs  fuzz_parse_generalized_time.rs  fuzz_parse_krb_error.rs  fuzz_parse_negotiate_response.rs  fuzz_parse_ntlm_type2.rs
src/: kerberos.rs  main.rs  ntp.rs  smb.rs  time_src.rs
