[package]
name = "skewrun"
version = "0.1.0"
edition = "2021"
description = "Kerberos clock skew wrapper for faketime — queries DC time via Kerberos/NTP/SMB and runs commands with the correct offset"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joaov-botelho/skewrun"
keywords = ["kerberos", "pentest", "faketime", "activedirectory", "clockskew"]
categories = ["command-line-utilities"]

[[bin]]
name = "skewrun"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
