[workspace]
members = [
    "crates/ad-time",
    "crates/skewrun",
]
exclude = ["fuzz"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
# Defense-in-depth: abort instead of silently wrapping on any arithmetic over
# attacker-controlled timestamps (offset math). Negligible cost for this tool.
overflow-checks = true
