[package]
name = "ad-time"
version = "1.2.0"
edition = "2021"
description = "Active Directory time discovery protocols for red teams."
license = "MIT OR Apache-2.0"
repository = "https://github.com/JVBotelho/skewrun"
readme = "../../README.md"
keywords = ["kerberos", "ntlm", "cldap", "active-directory", "pentest"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
thiserror = "2.0"
rand = "0.9"
getrandom = "0.3"
socket2 = "0.5"

[dev-dependencies]
proptest = "1"

[features]
fuzzing = []
