[package]
name = "skewrun"
version = "0.1.0"
edition = "2021"
description = "Kerberos clock skew wrapper for faketime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joaov-botelho/skewrun"

[[bin]]
name = "skewrun"
path = "src/main.rs"

[dependencies]
ad-time = { path = "../ad-time" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
which = "6"
rand = "0.8"
